Restyled to fix some alignment issues and better distinguish between different posts

--- a/cevo-hugo/static/css/post.css
+++ b/cevo-hugo/static/css/post.css
@@ -2,11 +2,10 @@
 /* Post */
 
 	.post {
-		padding-top: 3em;
 		background: #ffffff;
-		border-bottom: solid 1px rgba(160, 160, 160, 0.3);
-		margin: 0 0 3em 0;
+		border-top: solid 1px rgba(160, 160, 160, 0.3);
 		position: relative;
+		margin-top: 40px;
 	}
 
 		.post > header {
@@ -15,10 +14,7 @@
 			display: -ms-flex;
 			display: flex;
 			border-bottom: solid 1px rgba(160, 160, 160, 0.3);
-			left: -3em;
-			margin: -3em 0 3em 0;
 			position: relative;
-			width: calc(100% + 6em);
 		}
 
 			.post > header .title {
@@ -27,7 +23,6 @@
 				-ms-flex-grow: 1;
 				flex-grow: 1;
 				-ms-flex: 1;
-				padding: 3.75em 3em 3.3em 3em;
 			}
 
 				.post > header .title h2 {
@@ -35,15 +30,16 @@
 					font-size: 1.5em;
 				}
 
-				.post > header .title > :last-child {
-					margin-bottom: 0;
+				.post > header .title > p{
+					margin-right: 2em;
+					font-style: italic;
 				}
 
 			.post > header .meta {
-				padding: 3.75em 3em 1.75em 3em ;
+				padding: 1.75em 0em ;
 				border-left: solid 1px rgba(160, 160, 160, 0.3);
 				min-width: 17em;
-				text-align: right;
+				text-align: center;
 				width: 17em;
 			}
 
@@ -66,6 +62,10 @@
 					text-transform: uppercase;
 					white-space: nowrap;
 				}
+
+		.post > p {
+			margin-top: 2em;
+		}
 
 		.post > .image.featured {
 			overflow: hidden;
@@ -95,6 +95,7 @@
 			-webkit-align-items: center;
 			-ms-align-items: center;
 			align-items: center;
+			text-align: left;
 		}
 
 			.post > footer .actions {
@@ -140,26 +141,16 @@
 
 		@media screen and (max-width: 980px) {
 
-			.post {
-				border-left: 0;
-				border-right: 0;
-				left: -3em;
-				width: calc(100% + (3em * 2));
-			}
-
 				.post > header {
 					-moz-flex-direction: column;
 					-webkit-flex-direction: column;
 					-ms-flex-direction: column;
 					flex-direction: column;
-					padding: 3.75em 3em 1.25em 3em ;
 					border-left: 0;
 				}
 
 					.post > header .title {
 						-ms-flex: 0 1 auto;
-						margin: 0 0 2em 0;
-						padding: 0;
 						text-align: center;
 					}
 
@@ -177,7 +168,7 @@
 						-ms-justify-content: center;
 						justify-content: center;
 						border-left: 0;
-						margin: 0 0 2em 0;
+						margin: 1em 0;
 						padding-top: 0;
 						padding: 0;
 						text-align: left;
@@ -219,7 +210,7 @@
 
 		}
 
-		@media screen and (max-width: 736px) {
+		/*@media screen and (max-width: 736px) {
 
 			.post {
 				padding: 1.5em 1.5em 0.1em 1.5em ;
@@ -288,7 +279,7 @@
 						padding: 0 0 0 1.25em;
 					}
 
-		}
+		}*/
 
 /* Section/Article */
 
